feat: fixed mobile view

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
             }
         }
         
-        @media only screen and (max-width: 490px) {
+        @media only screen and (max-width: 355px) {
             #fadeshow {
                 display: none;
             }
@@ -29,7 +29,7 @@
             position: relative;
             display: inline-block;
             float: right;
-            top: 1rem;
+            top: 1.5rem;
             right: 1rem;
         }
         
@@ -48,7 +48,7 @@
             display: inline-block;
             text-decoration: none;
             margin-right: 1rem;
-            font-size: 1.6rem;
+            font-size: 80%;
         }
         
         body {
@@ -61,6 +61,7 @@
             top: 0.5rem;
             font-size: 1.171875rem;
             text-decoration: none;
+            z-index: 999;
         }
         
         .link {
@@ -95,7 +96,7 @@
         
         .nav__item {
             position: relative;
-            margin-right: 0.9rem;
+            margin-right: 0.6rem;
             bottom: 1rem;
             overflow: hidden;
             display: inline-block;
